hphp/hack/test/typecheck/shapes_cc_12.php.exp
File "shapes_cc_12.php", line 8, characters 3-4:
A shape field name cannot be an empty string (Typing[4136])
